# cpractise

./: .gitignore  CMakeLists.txt  functiondefin.c  main.c  voidpoint.c
memory/: Demo0.c  Demo1.c  LinkedList.c
pipe/: PipeDemo.c
process/: ExecDemo.c  ForkFunctionDemo.c  New2.c  VforkFunctionDemo.c
thread/: Pthread.c
